--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="js/OwlCarousel2-2.3.4/dist/assets/owl.carousel.css">
     <link rel="stylesheet" href="js/OwlCarousel2-2.3.4/dist/assets/owl.theme.default.css">
     <script src="js/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Scssflix</title>
 
 </head>
